# geoffrey

./: Dockerfile  Readme.md  aws.py  commands.py  main.py  pyproject.toml  telegram.Dockerfile  telegram_bot.py  telethon_bot.py
api/: main.py
discord_bot/: aws.py
scripts/: bot.py  commands.py  main.py
spreader/: console.py  packages.py  packages.yml  spreader.py
spreader/.spreader/dashy/: conf.yml  docker-compose.yml
spreader/.spreader/ispy/: .gitignore  docker-compose.yml
spreader/.spreader/minecraft/: docker-compose.yml
spreader/.spreader/plex/: docker-compose.yml
spreader/.spreader/transmission/: docker-compose.yml
spreader/.spreader/wireguard-pihole/: docker-compose.yml
telegram_bot/: channel_video_downloader.py  pyproject.toml  telegram_bot.py  telethon_bot.py  utils.py
tests/: test_aws_.py
